Fix cover image text padding on narrow screens

--- a/sass/site/blocks/_core.scss
+++ b/sass/site/blocks/_core.scss
@@ -13,7 +13,7 @@
 	min-height: 160px;
 	.wp-block-cover-image-text {
 		padding: 4rem 1rem;
-		padding: 8vw 1rem;
+		padding: 12vh 1rem;
 		font-family: $font__heading;
 		font-weight: 600;
 	}
