--- a/style.css
+++ b/style.css
@@ -1318,7 +1318,7 @@ p.entry-excerpt {
   min-height: 160px; }
   .wp-block-cover-image .wp-block-cover-image-text {
     padding: 4rem 1rem;
-    padding: 8vw 1rem;
+    padding: 12vh 1rem;
     font-family: "Montserrat", sans-serif;
     font-weight: 600; }
 
